k8smanifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  namespace: backend
  labels:
    app: sample-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:    
      containers:
      - name: sample-app
        image: g181210038/dotnetsample:latest 
        imagePullPolicy: Always
        ports:
          - containerPort: 80
          - containerPort: 443
