k8smanifests/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer-service
  namespace: backend
spec:
  selector:
    app: sample-app
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
